<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.tugalsan</groupId>
    <artifactId>com.tugalsan.api.file.pdf.pdfbox3.pdf2dom.fontverter</artifactId>
    <version>1.2.22</version>
    <!-- <name>FontVerter</name> -->
    <description>Library for converting various font formats.</description>
    <url>https://github.com/m-abboud/FontVerter</url>

    <developers>
        <developer>
            <name>Maddie Abboud</name>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- <jbrotli.version>0.5.0</jbrotli.version> -->
    </properties>

    <scm>
        <url>https://github.com/m-abboud/FontVerter</url>
        <connection>scm:git:git@github.com:m-abboud/FontVerter.git</connection>
        <developerConnection>scm:git:git@github.com:m-abboud/FontVerter.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>GNU Lesser General Public License 3.0</name>
            <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>23</release>
                    <enablePreview>true</enablePreview>
                    <!--<compilerArgs>
                        <arg>- -add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>-->
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!--pdfbox for validating generated fonts and cff parsing, fontbox has alright font parsing no
        generation tho and OTF classes with private constructors so can't extend off , windows/chrome will
        barf on a lot of things it doesn't too, todo move to test only dependency soon -->
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>3.0.4</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.18.0</version>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>
        <!--jbrotli is for woff2 generation and is not on central repo so dependency currently set to optional-->
        <!-- <dependency>
            <groupId>org.meteogroup.jbrotli</groupId>
            <artifactId>jbrotli</artifactId>
            <version>${jbrotli.version}</version>
            <optional>true</optional>
        </dependency>-->
        <!-- there's some sort of maven bug or jbrotli maven config issue, with x64 windows it
        will grab x86 native jar instead. maybe intellij maven integration issue? todo needs investigation -->
        <!-- <dependency>
            <groupId>org.meteogroup.jbrotli</groupId>
            <artifactId>jbrotli-native-win32-x86-amd64</artifactId>
            <version>${jbrotli.version}</version>
            <type>jar</type>
            <optional>true</optional>
        </dependency>-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.17.0</version>
        </dependency>

        
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava-primitives -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava-primitives</artifactId>
            <version>r03</version>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>bintray-nitram509-jbrotli</id>
            <name>bintray</name>
            <url>http://dl.bintray.com/nitram509/jbrotli</url>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.6.3</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>maven-central-release</id>
            <distributionManagement>
                <repository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
                </repository>
            </distributionManagement>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.7</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release-jcenter</id>
            <distributionManagement>
                <repository>
                    <id>bintray-repo</id>
                    <url>https://api.bintray.com/maven/m-abboud/maven/FontVerter/;publish=1</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>